--- a/src/resources/QuestionDetail.css
+++ b/src/resources/QuestionDetail.css
@@ -6,6 +6,7 @@
     width: 100%;
     margin-top: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: left;
   }
   
   .question-item {
@@ -14,6 +15,8 @@
   
   .answers {
     margin-left: 20px;
+    list-style-type: none;
+    padding: 0;
   }
   
   .answer {
