--- a/src/resources/TestPage.css
+++ b/src/resources/TestPage.css
@@ -4,7 +4,7 @@
 
 .timer-container {
     display: flex;
-    justify-content: flex-end; /* Căn lề phải */
+    justify-content: flex-end; 
     margin-bottom: 20px;
 }
 
@@ -27,40 +27,40 @@
 }
 
 .exam-title {
-    background-color: #ccc; /* Màu xám */
-    padding: 10px; /* Khoảng cách trong */
+    background-color: #ccc; 
+    padding: 10px; 
     border-radius: 5px;
-    display: inline-block; /* Để kích thước vừa với nội dung */
-    margin-bottom: 40px; /* Tạo khoảng cách phía dưới */
-    font-size: 24px; /* Tăng kích thước font chữ */
-    font-weight: bold; /* In đậm */
+    display: inline-block; 
+    margin-bottom: 40px; 
+    font-size: 24px; 
+    font-weight: bold;
 }
 
 .sidebar h3 {
     margin: 10px 0;
-    margin-bottom: 30px; /* Tạo khoảng cách phía dưới */
+    margin-bottom: 30px; 
 }
 
 .test-grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    column-gap: 5px; /* Khoảng cách giữa các cột ít hơn */
-    row-gap: 10px; /* Giữ nguyên khoảng cách giữa các hàng */
+    column-gap: 5px;
+    row-gap: 10px; 
 }
 
 .test-square {
-    width: 60px; /* Thay đổi kích thước rộng */
-    height: 60px; /* Thay đổi kích thước cao */
+    width: 60px; 
+    height: 60px; 
     background-color: #ddd;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 20px; /* Kích thước font chữ */
-    font-weight: bold; /* In đậm */
+    font-size: 20px; 
+    font-weight: bold; 
 }
 
 .green-square {
-    background-color: #4CAF50; /* Màu xanh lá cây */
+    background-color: #4CAF50; 
 }
 
 .submit-button {
@@ -87,21 +87,21 @@
 
 .test-area h2 {
     margin-top: 0;
-    text-align: left; /* Căn lề trái */
+    text-align: left; 
 }
 
 .question {
     margin-bottom: 20px;
-    text-align: left; /* Căn lề trái */
+    text-align: left; 
 }
 
 .paragraph {
-    text-align: left; /* Căn lề trái đoạn văn */
-    margin-bottom: 20px; /* Tạo khoảng cách giữa các đoạn văn */
+    text-align: left; 
+    margin-bottom: 20px; 
 }
 
 .paragraph p + p {
-    margin-top: 20px; /* Khoảng cách giữa các đoạn văn */
+    margin-top: 20px; 
 }
 .resizable-container {
     border: 1px solid #ccc; 
@@ -116,7 +116,7 @@
 .options {
     display: flex;
     flex-wrap: wrap;
-    gap: 10px; /* Khoảng cách giữa các lựa chọn */
+    gap: 10px; 
     align-items: center;
 }
 
@@ -132,7 +132,7 @@
 }
 
 .options input[type="radio"] {
-    margin-right: 5px; /* Khoảng cách giữa ô tròn và văn bản */
+    margin-right: 5px; 
 }
 
 .button-container {
@@ -171,21 +171,21 @@
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    resize: vertical; /* Cho phép điều chỉnh chiều cao */
+    resize: vertical; 
 }
 
 .submit-button {
-    background-color: #007bff; /* Màu nền của nút */
-    color: #fff; /* Màu chữ */
-    padding: 10px 20px; /* Kích thước gói của nút */
-    border: none; /* Không có viền */
-    border-radius: 5px; /* Bo tròn góc */
-    cursor: pointer; /* Con trỏ chuột khi rê vào nút */
-    margin-top: 20px; /* Khoảng cách với phần trên */
-    font-size: 16px; /* Kích thước chữ */
+    background-color: #007bff;
+    color: #fff; 
+    padding: 10px 20px;
+    border: none; 
+    border-radius: 5px; 
+    cursor: pointer; 
+    margin-top: 20px; 
+    font-size: 16px; 
   }
   
   .submit-button:hover {
-    background-color: #0056b3; /* Màu nền khi rê vào nút */
+    background-color: #0056b3; 
   }
   
